--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>hello</h1>
-    <p>hehhhhhh</p>
-    <a href="./day1/day.html"></a>
+    <a href="/files/day1/day.html">day1</a>
+    <a href="/files/day2/day2.html">day2</a>
+    <a href="/files/day3/day3.html">day3</a>
+
 </body>
 </html>
