--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>hello</h1>
     <a href="/files/idcard.html"></a>
+    <a href="/files/day1/day.html"></a>
+    <a href="/files/day2/day2.html"></a>
+    <a href="/files/day3/day3.html"></a>
 </body>
 </html>
