--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
     <h1>hello</h1>
-    <a href="/files/idcard.html"></a>
-    <a href="/files/day1/day.html"></a>
-    <a href="/files/day2/day2.html"></a>
-    <a href="/files/day3/day3.html"></a>
+   
+    <a href="/files/idcard.html">id card</a>
 </body>
 </html>
