--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>hello</h1>
-    <!-- <a href="/files/idcard.html">id card</a>
+    <a href="/files/idcard.html">id card</a>
     <a href="/files/day1/day.html">day1</a>
     <a href="/files/day2/day2.html">day2</a>
-    <a href="/files/day3/day3.html">day3</a> -->
+    <a href="/files/day3/day3.html">day3</a> 
     <a href="/files/selctors gallery.html"></a>
 </body>
 </html>
